refactor: unify drawer styles by replacing specific class names with a custom-drawer class for consistency

--- a/client/src/app/common/json-editor/json-editor-drawer.component.html
+++ b/client/src/app/common/json-editor/json-editor-drawer.component.html
@@ -3,7 +3,7 @@
   position="right"
   header="JSON Editor"
   [modal]="false"
-  styleClass="!w-150 json-editor-drawer"
+  styleClass="!w-150 custom-drawer json-editor-drawer"
 >
   <ng-template #content>
     <json-editor [(value)]="value" />
