--- a/client/src/app/common/record-detail/record-detail-drawer.component.html
+++ b/client/src/app/common/record-detail/record-detail-drawer.component.html
@@ -107,7 +107,7 @@
   position="right"
   header="Edit record"
   [modal]="false"
-  styleClass="!w-150 record-detail-drawer"
+  styleClass="!w-150 custom-drawer"
   (onShow)="onShow()"
   (onHide)="onHide()"
 >
