--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -24,3 +24,17 @@ html {
 :focus-visible {
   outline: none;
 }
+
+.custom-drawer {
+  .p-drawer-header {
+    border-bottom: 1px solid var(--p-surface-200);
+  }
+
+  .p-drawer-content {
+    padding-top: 1.25rem;
+  }
+
+  .p-drawer-footer {
+    border-top: 1px solid var(--p-surface-200);
+  }
+}
