--- a/client/src/app/chatbot/chatbot.component.html
+++ b/client/src/app/chatbot/chatbot.component.html
@@ -39,7 +39,7 @@
         <p-image src="assets/images/chatbot.png" alt="Image" width="80" />
         <div class="text-center">
           <p class="text-2xl font-medium">Ask about your database</p>
-          <p class="text-sm text-gray-500">AI responses may be inaccurate.</p>
+          <p class="text-sm text-surface-500">AI responses may be inaccurate.</p>
         </div>
       </div>
     }
@@ -53,7 +53,7 @@
       #editor
       contenteditable="true"
       data-placeholder="How can I help?"
-      class="w-full min-w-0 h-fit outline-0 empty:before:content-[attr(data-placeholder)] empty:before:text-gray-500 empty:before:pointer-events-none"
+      class="w-full min-w-0 h-fit outline-0 empty:before:content-[attr(data-placeholder)] empty:before:text-surface-500 empty:before:pointer-events-none"
       (input)="onInput($any($event))"
       (keydown.enter)="!isStreaming() ? onEnter($any($event)) : false"
     ></div>
