--- a/client/src/app/table/table-detail/table-detail.component.html
+++ b/client/src/app/table/table-detail/table-detail.component.html
@@ -48,7 +48,7 @@
 } @else {
   <div class="flex flex-col w-full h-full items-center justify-center m-1">
     <p-image src="assets/images/chill-guy.png" alt="Image" width="320" />
-    <p class="text-gray-500 italic flex items-center">
+    <p class="text-surface-500 italic flex items-center">
       <i class="pi pi-hand-point-right mr-2"></i>
       <span>Unlock insights by picking any table to explore its data!</span>
     </p>
