feat: add appendTo property to table menu for improved positioning

--- a/client/src/app/table/table-list/table-list.component.html
+++ b/client/src/app/table/table-list/table-list.component.html
@@ -24,7 +24,7 @@
   </ng-template>
 </p-confirmdialog>
 
-<p-menu #tableMenu [model]="menuItems" [popup]="true" />
+<p-menu #tableMenu [model]="menuItems" [popup]="true" appendTo="body" />
 
 <p-drawer
   [(visible)]="visibleTableEditorDrawer"
