--- a/client/src/app/chatbot/chatbot.component.html
+++ b/client/src/app/chatbot/chatbot.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full bg-gray-50 relative">
+<div class="w-full h-full relative" style="background-color: #f8f8f8">
   <p-scrollpanel #scrollContainer class="w-full h-full">
     @if (messages().length) {
       <div class="px-6 py-8 mb-30">
@@ -35,8 +35,14 @@
         }
       </div>
     } @else {
-      <div class="w-full h-full flex items-center pt-80 flex flex-col gap-4">
-        <p-image src="assets/images/chatbot.png" alt="Image" width="80" />
+      <div class="w-full h-full flex items-center pt-30 flex flex-col">
+        <video
+          autoplay
+          muted
+          loop
+          class="w-72 h-72"
+          src="assets/animations/chatbot-animation.mp4"
+        ></video>
         <div class="text-center">
           <p class="text-2xl font-medium">Ask about your database</p>
           <p class="text-sm text-surface-500">AI responses may be inaccurate.</p>
