feat: enhance table creation with auto-adding primary key and timestamps options, update UI for advanced settings

--- a/client/src/app/common/record-detail/record-detail-drawer.component.html
+++ b/client/src/app/common/record-detail/record-detail-drawer.component.html
@@ -59,13 +59,15 @@
         />
       }
       @case (DataType.Checkbox) {
-        <p-checkbox
-          [attr.inputId]="field.name"
-          [(ngModel)]="internalData[field.name]"
-          [readonly]="viewOnly()"
-          [binary]="true"
-          size="large"
-        />
+        <div class="col-span-2">
+          <p-checkbox
+            [attr.inputId]="field.name"
+            [(ngModel)]="internalData[field.name]"
+            [readonly]="viewOnly()"
+            [binary]="true"
+            size="large"
+          />
+        </div>
       }
       @case (DataType.Date) {
         <p-datepicker
