--- a/client/src/app/common/spreadsheet/components/field-cell/long-text/cell.component.html
+++ b/client/src/app/common/spreadsheet/components/field-cell/long-text/cell.component.html
@@ -23,7 +23,7 @@
         class="hover:bg-surface-50 text-surface-500 cursor-pointer w-5 h-5 rounded-md flex items-center justify-center"
         (click)="visibleRichTextEditor = true"
       >
-        <i class="pi pi-arrow-up-right-and-arrow-down-left-from-center"></i>
+        <i class="icon icon-maximize-2"></i>
       </div>
     }
   </div>
