--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -6,7 +6,7 @@
   >
     <div class="flex items-center">
       <p-button
-        icon="pi pi-bars"
+        icon="icon icon-menu"
         severity="secondary"
         [text]="true"
         size="large"
@@ -15,8 +15,13 @@
       <div class="font-semibold">Cozy DB</div>
     </div>
     <div class="flex gap-2 items-center">
-      <p-button label="API Docs" severity="secondary" icon="pi pi-book" (click)="openAPIDocs()" />
-      <p-button icon="pi pi-sparkles" severity="secondary" (click)="toggleChatbot()" />
+      <p-button
+        label="API Docs"
+        severity="secondary"
+        icon="icon icon-file-text"
+        (click)="openAPIDocs()"
+      />
+      <p-button icon="icon icon-sparkles" severity="secondary" (click)="toggleChatbot()" />
     </div>
   </div>
   <div
