--- a/client/src/app/common/spreadsheet/components/view-options/column-view-options.component.html
+++ b/client/src/app/common/spreadsheet/components/view-options/column-view-options.component.html
@@ -11,20 +11,20 @@
         >
           <div class="flex min-w-0 items-center gap-2">
             <!-- Drag handle -->
-            <div cdkDragHandle>
-              <img src="/icons/drag-dots.svg" />
+            <div cdkDragHandle class="mt-1">
+              <i class="icon icon-grip-vertical"></i>
             </div>
 
             <!-- Field name -->
             <div class="flex items-center gap-2">
               @if (column.primary) {
-                <i class="pi pi-key" style="color: var(--p-primary-color)"></i>
+                <i class="icon icon-key" style="color: var(--p-primary-color)"></i>
               }
               <span class="font-medium break-all">
                 {{ column.field.name }}
               </span>
               @if (column.field.required) {
-                <i class="pi pi-asterisk text-red-500" style="font-size: 6px"></i>
+                <i class="icon icon-asterisk text-red-500"></i>
               }
             </div>
           </div>
@@ -33,7 +33,7 @@
           <p-button
             variant="text"
             severity="secondary"
-            [icon]="`pi ${column.hidden ? 'pi-eye-slash' : 'pi-eye'}`"
+            [icon]="`icon ${column.hidden ? 'icon-eye-closed' : 'icon-eye'}`"
             (click)="toggleHidden(column)"
           />
         </div>
@@ -44,7 +44,7 @@
 
 <p-button
   label="Customize"
-  icon="pi pi-cog"
+  icon="icon icon-columns-3-cog"
   variant="outlined"
   severity="secondary"
   (click)="popover.show($event)"
