--- a/client/src/app/table/table-list/table-list.component.html
+++ b/client/src/app/table/table-list/table-list.component.html
@@ -119,7 +119,7 @@
   <div>Tables</div>
   <div class="flex">
     <p-button
-      icon="pi pi-refresh"
+      icon="icon icon-refresh-cw"
       severity="secondary"
       size="small"
       [text]="true"
@@ -127,7 +127,7 @@
       (click)="refreshTables()"
     />
     <p-button
-      icon="pi pi-plus"
+      icon="icon icon-plus"
       severity="secondary"
       size="small"
       [text]="true"
@@ -138,7 +138,7 @@
 </div>
 <div class="p-4">
   <p-iconfield>
-    <p-inputicon class="pi pi-search" />
+    <p-inputicon class="icon icon-search" />
     <input
       class="w-full"
       type="text"
@@ -157,7 +157,7 @@
         class="flex cursor-pointer p-4 text-surface-700 hover:bg-surface-100 duration-150 transition-colors p-ripple"
         [class.bg-surface-100]="table.tableName === tblService.selectedTable()?.tableName"
       >
-        <i class="pi pi-table text-surface-500 mr-2 mt-0.5"></i>
+        <i class="icon icon-table-2 text-surface-500 mr-2 mt-0.5"></i>
         <div class="flex-1">
           <p class="font-medium">{{ table.tableName }}</p>
           <p class="font-light text-surface-500 text-xs">
@@ -169,7 +169,7 @@
           </p>
         </div>
         <p-button
-          icon="pi pi-ellipsis-v"
+          icon="icon icon-ellipsis-vertical"
           severity="secondary"
           size="small"
           [text]="true"
