--- a/client/src/app/common/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/common/spreadsheet/spreadsheet.component.html
@@ -144,7 +144,7 @@
           </div>
           @if (column.field.description?.length) {
             <i
-              class="icon icon-info-circle"
+              class="icon icon-info"
               style="color: var(--p-surface-500); font-size: 12px"
               [pTooltip]="column.field.description"
               tooltipPosition="bottom"
@@ -176,7 +176,7 @@
         }
         @if (column.field.description?.length) {
           <i
-            class="icon icon-info-circle"
+            class="icon icon-info"
             style="color: var(--p-surface-500); font-size: 12px"
             [pTooltip]="column.field.description"
             tooltipPosition="bottom"
