feat: update theme preset to use AuraSky and enhance button styles for better UI consistency

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -18,10 +18,11 @@
       <p-button
         label="API Docs"
         severity="secondary"
+        [outlined]="true"
         icon="icon icon-file-text"
         (click)="openAPIDocs()"
       />
-      <p-button icon="icon icon-sparkles" severity="secondary" (click)="toggleChatbot()" />
+      <p-button icon="icon icon-sparkles" [outlined]="true" (click)="toggleChatbot()" />
     </div>
   </div>
   <div
