--- a/client/src/app/common/rich-text-editor/rich-text-editor-drawer.component.scss
+++ b/client/src/app/common/rich-text-editor/rich-text-editor-drawer.component.scss
@@ -5,11 +5,25 @@
     }
 
     .p-drawer-content {
-      padding-top: 1.25rem;
+      padding: 0;
     }
 
     .p-drawer-footer {
       border-top: 1px solid var(--p-surface-200);
+    }
+
+    .p-editor {
+      .p-editor-toolbar {
+        border-radius: 0;
+        border-top: 0 !important;
+        border-left: 0 !important;
+        border-right: 0 !important;
+      }
+
+      .p-editor-content {
+        border-radius: 0;
+        border: 0;
+      }
     }
   }
 }
