--- a/client/src/app/common/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/common/spreadsheet/spreadsheet.component.html
@@ -134,9 +134,10 @@
           [style.maxWidth.px]="column.width"
         >
           @if (column.primary) {
-            <i class="icon icon-key" style="color: var(--p-primary-color)"></i>
+            <i class="icon icon-key rotate-45" style="color: var(--p-primary-color)"></i>
+          } @else {
+            <i [class]="`${column.field.icon}`"></i>
           }
-          <i [class]="`${column.field.icon}`"></i>
           <div
             class="text-sm white-space-nowrap overflow-hidden truncate"
             [attr.title]="column.field.name"
@@ -166,9 +167,10 @@
           [style.maxHeight.%]="100"
         ></div>
         @if (column.primary) {
-          <i class="icon icon-key" style="color: var(--p-primary-color)"></i>
+          <i class="icon icon-key rotate-45" style="color: var(--p-primary-color)"></i>
+        } @else {
+          <i [class]="`${column.field.icon}`"></i>
         }
-        <i [class]="`${column.field.icon}`"></i>
         <div
           class="text-sm white-space-nowrap overflow-hidden truncate"
           [attr.title]="column.field.name"
