--- a/client/src/app/common/record-detail/record-detail-drawer.component.html
+++ b/client/src/app/common/record-detail/record-detail-drawer.component.html
@@ -3,9 +3,10 @@
     <label [attr.for]="field.name" class="col-span-1">
       <div class="flex items-center gap-2">
         @if (field.params.isPrimary) {
-          <i class="icon icon-key" style="color: var(--p-primary-color)"></i>
+          <i class="icon icon-key rotate-45" style="color: var(--p-primary-color)"></i>
+        } @else {
+          <i [class]="`${field.icon}`"></i>
         }
-        <i [class]="`${field.icon}`"></i>
         <p class="font-medium">{{ field.name }}</p>
       </div>
       <p class="text-surface-500 text-sm">
